--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-click==8.1.8
-joblib==1.4.2
+scikit-learn==1.5.0
+numpy==1.23.5
 nltk==3.9.1
+joblib==1.4.2
+click==8.1.8
 regex==2024.11.6
 tqdm==4.67.1
-scikit-learn==1.2.0
